Fixed nav bar further

--- a/index.html
+++ b/index.html
@@ -66,27 +66,24 @@
 <div class = "light-blue" style = "margin-bottom: -20px;">
 	<nav class="navbar">
 		<div class="container">
-		<!--<h1> AAUP Colorado School Of Mines</h1><br>-->
-		<div style = "height: 100px;"><img src="assets/Images/aaup-logo-2_0.png" style=" height: 80px; border-style: solid; border-width: 5px; background-color: white; border-radius: 25px;"></div>
-		<ul class="nav navbar-nav">
-			<li>
-			<ul class="nav nav-pills" role="tablist">
-				<li class= "active"><a class="btn btn-lg btn-link" href="#" style="margin-right: 50px; background-color: #D2492A;"><b>Home</b></a></li>
-			</ul>
-			</li>
+		   	<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>                        
+				</button>
+			</div>
+			<div style = "height: 100px;"><img src="assets/Images/aaup-logo-2_0.png" style=" height: 80px; border-style: solid; border-width: 5px; background-color: white; border-radius: 25px;"></div>
+				<ul class="nav navbar-nav" style = "display:inline;">
+					<li class= "active"><a class="btn btn-lg btn-link" href="#" style="margin-right: 50px; background-color: #D2492A;"><b>Home</b></a></li>
 <!-- NEWS AND EVENTS -->
-<li>
-			<ul class="nav navbar-inverse" style ="background-color: #425262;">
-				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262; margin-right: 50px;"><b>News + Events</b></a>
-					<ul class="dropdown-menu" style="margin-left: 15px;">
-						<li><a tabindex="-1" href="#">News</a></li>
-						<li><a tabindex="-1" href="#">Events</a></li>
-					</ul>
-				</li>
-			</ul>
-			</li>
+					<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262; margin-right: 50px;"><b>News + Events</b></a>
+						<ul class="dropdown-menu" style="margin-left: 15px;">
+							<li><a tabindex="-1" href="#">News</a></li>
+							<li><a tabindex="-1" href="#">Events</a></li>
+						</ul>
+					</li>
 <!-- INFORMATION -->
-			<ul class="nav navbar-inverse" style ="background-color: #425262;">
 				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262; margin-right: 50px;"><b>Information</b></a>
 					<ul class="dropdown-menu" style="margin-left: 15px;">
 						<li><a tabindex="-1" href="#">Constitution</a></li>
@@ -108,26 +105,24 @@
 						</li>
 					</ul>
 				</li>
-			</ul>
+
 			
 <!-- WHO WE ARE -->
-			<ul class="nav navbar-inverse" style ="background-color: #425262;">
 				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262; margin-right: 50px;"><b>Who We Are</b></a>
 					<ul class="dropdown-menu" style="margin-left: 15px;">
 						<li><a tabindex="-1" href="#">Faculty</a></li>
 						<li><a tabindex="-1" href="#">Our Purpose</a></li>
 					</ul>
 				</li>
-			</ul>
-<!-- MEMBERSHIP -->			
-			<ul class="nav navbar-inverse" style ="background-color: #425262;">
+
+<!-- MEMBERSHIP -->		
 				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262;"><b>Membership</b></a>
 					<ul class="dropdown-menu" style="margin-left: 15px;">
 						<li><a tabindex="-1" href="#">Why Join Us?</a></li>
 						<li><a tabindex="-1" href="#">Join AAUP</a></li>
 					</ul>
 				</li>
-			</ul>
+
 			</ul>
 		</div>
   </nav>
