--- a/join_aaup.html
+++ b/join_aaup.html
@@ -57,12 +57,12 @@ $(document).ready(function(){
 			</button>
 			<a class="navbar-brand currentPageFont" style = "font-size:40px;">Membership</a>
 			<div class="collapse navbar-collapse" class = "margin-bottom: 0px;" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-					<li class="nav-item style-navBarItem">
-						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+				<ul class="nav navbar-nav ">
+					<li class="nav-item style-navBarItem ">
+						<a class="nav-link " href="index.html">Home <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item dropdown style-navBarItem">
-						<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<a class="nav-link dropdown-toggle " href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							News + Events
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
