--- a/index.html
+++ b/index.html
@@ -79,15 +79,43 @@
 <!-- NEWS AND EVENTS -->
 					<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262; margin-right: 50px;"><b>News + Events</b></a>
 						<ul class="dropdown-menu" style="margin-left: 15px;">
-							<li><a tabindex="-1" href="#">News</a></li>
+							<li><a tabindex="-1" href="news.html">News</a></li>
 							<li><a tabindex="-1" href="#">Events</a></li>
 						</ul>
 					</li>
 <!-- INFORMATION -->
 				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262; margin-right: 50px;"><b>Information</b></a>
 					<ul class="dropdown-menu" style="margin-left: 15px;">
-						<li><a tabindex="-1" href="#">Constitution</a></li>
-						<li><a tabindex="-1" href="#">Bylaws</a></li>
+						<li class="dropdown-submenu">
+							<a class="test" tabindex="-1" href="#">Laws<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<div class="dropdown-divider"></div>
+								<a style= "padding-left: 50px;"><b>External Links</b></a>
+								<div class="dropdown-divider"></div>
+								<li><a tabindex="-1" href="https://aaupcolorado.org/law/">law on Non-Tenure Track Teaching Contracts</a></li>
+								<li><a tabindex="-1" href="https://www.nlrb.gov/resources/national-labor-relations-act">National Labor Relations Act</a></li>
+							</ul>
+						</li>
+						<li class="dropdown-submenu">
+							<a class="test" tabindex="-1" href="#">Constitution<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<div class="dropdown-divider"></div>
+								<a style= "padding-left: 50px;"><b>External Links</b></a>
+								<div class="dropdown-divider"></div>
+								<li><a tabindex="-1" href="https://aaupcolorado.org/constitution-2/">AAUP Colorado Constitution</a></li>
+								<li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">AAUP National Constitution</a></li>
+							</ul>
+						</li>
+						<li class="dropdown-submenu">
+							<a class="test" tabindex="-1" href="#">Bylaws<span class="caret"></span></a>
+								<ul class="dropdown-menu">
+									<div class="dropdown-divider"></div>
+									<a style= "padding-left: 50px;"><b>External Links</b></a>
+									<div class="dropdown-divider"></div>
+									<li><a tabindex="-1" href="https://www.aaup.org/get-involved/start-chapter/sample-bylaws">Sample Bylaws</a></li>
+									<li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">AAUP National Constitution</a></li>
+								</ul>
+						</li>
 						<li class="dropdown-submenu">
 							<a class="test" tabindex="-1" href="#">AAUP Affiliates<span class="caret"></span></a>
 							<ul class="dropdown-menu">
@@ -110,16 +138,16 @@
 <!-- WHO WE ARE -->
 				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262; margin-right: 50px;"><b>Who We Are</b></a>
 					<ul class="dropdown-menu" style="margin-left: 15px;">
-						<li><a tabindex="-1" href="#">Faculty</a></li>
-						<li><a tabindex="-1" href="#">Our Purpose</a></li>
+						<li><a tabindex="-1" href="faculty.html">Faculty</a></li>
+						<li><a tabindex="-1" href="our_purpose.html">Our Purpose</a></li>
 					</ul>
 				</li>
 
 <!-- MEMBERSHIP -->		
 				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262;"><b>Membership</b></a>
 					<ul class="dropdown-menu" style="margin-left: 15px;">
-						<li><a tabindex="-1" href="#">Why Join Us?</a></li>
-						<li><a tabindex="-1" href="#">Join AAUP</a></li>
+						<li><a tabindex="-1" href="https://www.aaup.org/membership/join">Why Join Us?</a></li>
+						<li><a tabindex="-1" href="join_aaup.html">Join AAUP</a></li>
 					</ul>
 				</li>
 
