--- a/news.html
+++ b/news.html
@@ -52,73 +52,97 @@ $(document).ready(function(){
 });
 </script>
 
-<div class="light-blue">
-	<div class="container navBar" style = "width: 100%;">
-		<nav class="navbar navbar-toggleable-lg navbar-inverse bg-faded" style = "background-color: #425262; border: none; margin-bottom: 0px; ">
-			<button class="navbar-toggler navbar-toggler-right  dark-blue" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<a class="navbar-brand currentPageFont" style = "font-size:40px;">Membership</a>
-			<div class="collapse navbar-collapse" class = "margin-bottom: 0px;" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-					<li class="nav-item style-navBarItem">
-						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item dropdown style-navBarItem">
-						<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							News + Events
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="#">News</a>
-							<a class="dropdown-item" href="#">Events</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown style-navBarItem">
-						<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Information
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="#">Constitution</a>
-							<a class="dropdown-item" href="#">BYLAWS</a>
-							<a class="dropdown-item" href="#">Documents</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown style-navBarItem">
-						<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Who We Are
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="faculty.html">Faculty</a>
-							<a class="dropdown-item" href="our_purpose.html">Our Purpose</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown style-navBarItem">
-						<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Links
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="https://www.aaup.org/">AAUP - National</a>
-							<a class="dropdown-item" href="https://www.aaup.org/reports-publications/journal-academic-freedom">AAUP Journal of Academic Freedom</a>
-							<a class="dropdown-item" href="http://portfolio.du.edu/aaup">University Of Denver Chapter</a>
-							<a class="dropdown-item" href="https://aaupcsu.org/">Colorado State University - Fort Collins Chapter</a>
-							<a class="dropdown-item" href="https://sites.google.com/site/coloradoadjunctswiki/">Colorado Community College Chapter</a>
-							<a class="dropdown-item" href="http://aaup-msudenver.org/">Metropolitan State University Chapter</a>
-							<a class="dropdown-item" href="http://www.cu-aaup.org/">University of Colorado- Boulder Chapter</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown style-navBarItem">
-						<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Membership
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="#">Why Join Us?</a>
-							<a class="dropdown-item" href="#">Join AAUP</a>
-						</div>
-					</li>
-				</ul>
+<div class = "light-blue" style = "margin-bottom: -20px;">
+	<nav class="navbar">
+		<div class="container">
+		   	<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>                        
+				</button>
 			</div>
-		</nav>
-	</div>
+			<div style = "height: 100px;"><img src="assets/Images/aaup-logo-2_0.png" style=" height: 80px; border-style: solid; border-width: 5px; background-color: white; border-radius: 25px;"></div>
+				<ul class="nav navbar-nav" style = "display:inline;">
+					<li class= ""><a class="btn btn-lg btn-link" href="index.html" style="margin-right: 50px;"><b>Home</b></a></li>
+<!-- NEWS AND EVENTS -->
+					<li class="dropdown "><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #D2492A; margin-right: 50px;"><b>News + Events</b></a>
+						<ul class="dropdown-menu" style="margin-left: 15px;">
+							<li><a tabindex="-1" href="news.html">News</a></li>
+							<li><a tabindex="-1" href="#">Events</a></li>
+						</ul>
+					</li>
+<!-- INFORMATION -->
+				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262; margin-right: 50px;"><b>Information</b></a>
+					<ul class="dropdown-menu" style="margin-left: 15px;">
+						<li class="dropdown-submenu">
+							<a class="test" tabindex="-1" href="#">Laws<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<div class="dropdown-divider"></div>
+								<a style= "padding-left: 50px;"><b>External Links</b></a>
+								<div class="dropdown-divider"></div>
+								<li><a tabindex="-1" href="https://aaupcolorado.org/law/">law on Non-Tenure Track Teaching Contracts</a></li>
+								<li><a tabindex="-1" href="https://www.nlrb.gov/resources/national-labor-relations-act">National Labor Relations Act</a></li>
+							</ul>
+						</li>
+						<li class="dropdown-submenu">
+							<a class="test" tabindex="-1" href="#">Constitution<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<div class="dropdown-divider"></div>
+								<a style= "padding-left: 50px;"><b>External Links</b></a>
+								<div class="dropdown-divider"></div>
+								<li><a tabindex="-1" href="https://aaupcolorado.org/constitution-2/">AAUP Colorado Constitution</a></li>
+								<li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">AAUP National Constitution</a></li>
+							</ul>
+						</li>
+						<li class="dropdown-submenu">
+							<a class="test" tabindex="-1" href="#">Bylaws<span class="caret"></span></a>
+								<ul class="dropdown-menu">
+									<div class="dropdown-divider"></div>
+									<a style= "padding-left: 50px;"><b>External Links</b></a>
+									<div class="dropdown-divider"></div>
+									<li><a tabindex="-1" href="https://www.aaup.org/get-involved/start-chapter/sample-bylaws">Sample Bylaws</a></li>
+									<li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">AAUP National Constitution</a></li>
+								</ul>
+						</li>
+						<li class="dropdown-submenu">
+							<a class="test" tabindex="-1" href="#">AAUP Affiliates<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<div class="dropdown-divider"></div>
+								<a style= "padding-left: 50px;"><b>External Links</b></a>
+								<div class="dropdown-divider"></div>
+								<li><a tabindex="-1" href="https://www.aaup.org/">AAUP - National</a></li>
+								<li><a tabindex="-1" href="https://www.aaup.org/reports-publications/journal-academic-freedom">AAUP Journal of Academic Freedom</a></li>
+								<li><a tabindex="-1" href="http://portfolio.du.edu/aaup">University Of Denver Chapter</a></li>
+								<li><a tabindex="-1" href="https://aaupcsu.org/">Colorado State University - Fort Collins Chapter</a></li>
+								<li><a tabindex="-1" href="https://sites.google.com/site/coloradoadjunctswiki/">Colorado Community College Chapter</a></li>
+								<li><a tabindex="-1" href="http://aaup-msudenver.org/">Metropolitan State University Chapter</a></li>
+								<li><a tabindex="-1" href="http://www.cu-aaup.org/">University of Colorado- Boulder Chapter</a></li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+
+			
+<!-- WHO WE ARE -->
+				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262; margin-right: 50px;"><b>Who We Are</b></a>
+					<ul class="dropdown-menu" style="margin-left: 15px;">
+						<li><a tabindex="-1" href="faculty.html">Faculty</a></li>
+						<li><a tabindex="-1" href="our_purpose.html">Our Purpose</a></li>
+					</ul>
+				</li>
+
+<!-- MEMBERSHIP -->		
+				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262;"><b>Membership</b></a>
+					<ul class="dropdown-menu" style="margin-left: 15px;">
+						<li><a tabindex="-1" href="https://www.aaup.org/membership/join">Why Join Us?</a></li>
+						<li><a tabindex="-1" href="join_aaup.html">Join AAUP</a></li>
+					</ul>
+				</li>
+
+			</ul>
+		</div>
+  </nav>
 </div>
 	
 <!-- NAIN PAGE IN -->
